@@ -1925,3 +1925,45 @@ CleanupExit:
 
     return result;
 }
+
+PPH_STRING PhGetServiceRelevantFileName(
+    _In_ PPH_STRINGREF ServiceName,
+    _In_ SC_HANDLE ServiceHandle
+    )
+{
+    PPH_STRING fileName = NULL;
+    LPQUERY_SERVICE_CONFIG config;
+
+    if (config = PhGetServiceConfig(ServiceHandle))
+    {
+        PhGetServiceDllParameter(ServiceName, &fileName);
+
+        if (!fileName)
+        {
+            PPH_STRING commandLine;
+
+            commandLine = PhCreateString(config->lpBinaryPathName);
+
+            if (config->dwServiceType & SERVICE_WIN32)
+            {
+                PH_STRINGREF dummyFileName;
+                PH_STRINGREF dummyArguments;
+
+                PhParseCommandLineFuzzy(&commandLine->sr, &dummyFileName, &dummyArguments, &fileName);
+
+                if (!fileName)
+                    PhSwapReference(&fileName, commandLine);
+            }
+            else
+            {
+                fileName = PhGetFileName(commandLine);
+            }
+
+            PhDereferenceObject(commandLine);
+        }
+
+        PhFree(config);
+    }
+
+    return fileName;
+}
